--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lähetä kenkäsi tänään ja me hoidamme SINUN puolestasi</title> <!-- Sivun otsikon nimi -->
-    <link rel="stylesheet" href="kfix.css" />
+    <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" 
